--- a/src/main/resources/templates/fragmentAdmin.html
+++ b/src/main/resources/templates/fragmentAdmin.html
@@ -97,7 +97,7 @@
 	<nav class="col-md-2 d-none d-md-block sidebar" th:fragment="sidebar">
 		<div class="sidebar-sticky">
 			<div class="logo">
-				<a class="navbar-brand text-success" th:href="@{/vegetfood/admin}">Vegefoods</a>
+				<a class="navbar-brand text-success" th:href="@{/vegetfood}">Vegefoods</a>
 			</div>
 			<ul class="nav flex-column list-group">
 				<li class="nav-item list-group-item" id="adminTab">
