--- a/src/main/resources/templates/product-detail.html
+++ b/src/main/resources/templates/product-detail.html
@@ -13,7 +13,7 @@
 			<div class="row no-gutters slider-text align-items-center justify-content-center">
 				<div class="col-md-9 ftco-animate text-center">
 					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span class="mr-2"><a
-								href="index.html">Product</a></span> <span>Product Single</span></p>
+								th:href="@{/vegetfood}">Product</a></span> <span>Product Single</span></p>
 					<h1 class="mb-0 bread">Product Single</h1>
 				</div>
 			</div>
@@ -58,19 +58,6 @@
 					<p class="price"><span th:text="'$'+${product.price}"></span></p>
 					<p th:text="${product.description}"></p>
 					<div class="row mt-4">
-						<div class="col-md-6">
-							<div class="form-group d-flex">
-								<div class="select-wrap">
-									<div class="icon">
-										<span class="fa-solid fa-chevron-down"></span>
-									</div>
-									<select name="size" id="size" class="form-control">
-										<option value="1">Small</option>
-										<option value="2">Medium</option>
-									</select>
-								</div>
-							</div>
-						</div>
 						<div class="w-100"></div>
 						<div class="input-group col-md-6 d-flex mb-3">
 							<span class="input-group-btn mr-2">
@@ -78,8 +65,8 @@
 									<i class="fa-solid fa-minus"></i>
 								</button>
 							</span>
-							<input type="text" id="quantity" name="quantity" value="1" class="form-control input-number" min="1"
-								max="100">
+							<input type="text" id="quantity" name="quantity" value="1" class="form-control input-number"
+								min="1" max="100">
 							<span class="input-group-btn ml-2">
 								<button type="button" class="quantity-right-plus btn" data-type="plus" data-field="">
 									<i class="fa-solid fa-plus"></i>
@@ -91,7 +78,7 @@
 							<p style="color: #000;">600 kg available</p>
 						</div>
 					</div>
-					<p><input type="submit" class="btn btn-black py-3 px-5" value="Thêm vào giỏ hàng"/></p>
+					<p><input type="submit" class="btn btn-black py-3 px-5" value="Thêm vào giỏ hàng" /></p>
 				</form>
 			</div>
 		</div>
