--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -2,7 +2,12 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 
 <head th:replace="fragmentAdmin :: head"></head>
-
+<style>
+	.align-middle {
+	  vertical-align: middle;
+	}
+	
+</style>
 <body>
     <!-- Sidebar -->
     <div class="container-fluid">
@@ -52,15 +57,15 @@
                             </thead>
                             <tbody>
                                 <tr th:each="c : ${categories}">
-                                    <td th:text="${c.id}"></td>
-                                    <td th:text="${c.name}"></td>
-                                    <td th:value="${c.active}">
+                                    <td th:text="${c.id}" class="align-middle"></td>
+                                    <td th:text="${c.name}" class="align-middle"></td>
+                                    <td th:value="${c.active}" class="align-middle">
 									    <span style="padding: 10px; border-radius: 5px;color: #fff;" th:text="${c.active == true ? 'ACTIVE' : 'BLOCK'}" 
 									          th:class="${c.active == false ? 'bg-danger' : 'bg-success'}">
 									    </span>
 									</td>
 
-                                    <td>
+                                    <td class="align-middle">
                                         <button type="button" class="btn-edit btn btn-primary" data-bs-toggle="modal"
 			                                data-bs-target="#editCategory">
 			                                <i class="fa fa-edit"></i>
@@ -119,8 +124,8 @@
                         <div class="mb-3 col-6">
                         	<label for="categoryName" class="col-form-label">Trạng thái</label>
                         	<select class="form-select" th:field="*{active}" name="status" id="status">
-							  <option th:value="true">Active</option>
-							  <option th:value="false">Block</option>
+							  <option th:value="true">ACTIVE</option>
+							  <option th:value="false">BLOCK</option>
 							</select>
                         </div>
                 </div>
