--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -8,11 +8,11 @@
 
 <nav th:replace="fragment :: nav"></nav>
 
-<div class="hero-wrap hero-bread" style="background-image: url('images/bg_1.jpg');">
+<div class="hero-wrap hero-bread" style="background-image: url('/images/bg_1.jpg');">
     <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
             <div class="col-md-9 ftco-animate text-center">
-                <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Checkout</span></p>
+                <p class="breadcrumbs"><span class="mr-2"><a th:href="@{/vegetfood}">Home</a></span> <span>Checkout</span></p>
                 <h1 class="mb-0 bread">Checkout</h1>
             </div>
         </div>
@@ -21,154 +21,103 @@
 
 <section class="ftco-section">
     <div class="container">
-        <div class="row justify-content-center">
+        <form th:action="@{/vegetfood/checkout-success}" method="post" class="row justify-content-center">
             <div class="col-xl-7 ftco-animate">
-                <form action="#" class="billing-form">
-                    <h3 class="mb-4 billing-heading">Billing Details</h3>
+                <div class="billing-form">
+                    <h3 class="mb-4 billing-heading">Chi tiết hóa đơn</h3>
                     <div class="row align-items-end">
-                        <div class="col-md-6">
+                        <div class="col-md-8">
                             <div class="form-group">
-                                <label for="firstname">Firt Name</label>
-                                <input type="text" class="form-control" placeholder="">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="lastname">Last Name</label>
-                                <input type="text" class="form-control" placeholder="">
+                                <label for="firstname">Tên</label>
+                                <input type="text" class="form-control" th:value="${session.user.name}" required="required">
                             </div>
                         </div>
                         <div class="w-100"></div>
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="country">State / Country</label>
-                                <div class="select-wrap">
-                                    <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                                    <select name="" id="" class="form-control">
-                                        <option value="">France</option>
-                                        <option value="">Italy</option>
-                                        <option value="">Philippines</option>
-                                        <option value="">South Korea</option>
-                                        <option value="">Hongkong</option>
-                                        <option value="">Japan</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="w-100"></div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="streetaddress">Street Address</label>
-                                <input type="text" class="form-control" placeholder="House number and street name">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="text" class="form-control"
-                                       placeholder="Appartment, suite, unit etc: (optional)">
-                            </div>
-                        </div>
-                        <div class="w-100"></div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="towncity">Town / City</label>
-                                <input type="text" class="form-control" placeholder="">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="postcodezip">Postcode / ZIP *</label>
-                                <input type="text" class="form-control" placeholder="">
-                            </div>
-                        </div>
-                        <div class="w-100"></div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="phone">Phone</label>
-                                <input type="text" class="form-control" placeholder="">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="emailaddress">Email Address</label>
-                                <input type="text" class="form-control" placeholder="">
+                               <label for="country">Quốc gia</label>
+                               <input type="text" class="form-control" value="Việt Nam">
                             </div>
                         </div>
                         <div class="w-100"></div>
                         <div class="col-md-12">
-                            <div class="form-group mt-4">
-                                <div class="radio">
-                                    <label class="mr-3"><input type="radio" name="optradio"> Create an Account? </label>
-                                    <label><input type="radio" name="optradio"> Ship to different address</label>
-                                </div>
+                            <div class="form-group">
+                                <label for="streetaddress">Địa chỉ</label>
+                                <input type="text" class="form-control" name="address" th:value="${session.user.address}" required="required">
                             </div>
                         </div>
+                       
+                        <div class="w-100"></div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="phone">Số điện thoại</label>
+                                <input type="text" class="form-control" name="phoneNumber" th:value="${session.user.phoneNumber}" required="required">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="emailaddress">Email</label>
+                                <input type="text" class="form-control" th:value="${session.user.email}">
+                            </div>
+                        </div>
+                        <div class="w-100"></div>
                     </div>
-                </form><!-- END -->
+                </div><!-- END -->
             </div>
             <div class="col-xl-5">
                 <div class="row mt-5 pt-3">
                     <div class="col-md-12 d-flex mb-5">
                         <div class="cart-detail cart-total p-3 p-md-4">
-                            <h3 class="billing-heading mb-4">Cart Total</h3>
+                            <h3 class="billing-heading mb-4">Tổng cộng hóa đơn</h3>
                             <p class="d-flex">
-                                <span>Subtotal</span>
-                                <span>$20.60</span>
+                                <span>Tạm tính</span>
+                                <span th:text="${totalPrice} + ' VND'"></span>
                             </p>
                             <p class="d-flex">
-                                <span>Delivery</span>
-                                <span>$0.00</span>
+                                <span>Phí vận chuyển</span>
+                                <span>0 VND</span>
                             </p>
                             <p class="d-flex">
-                                <span>Discount</span>
-                                <span>$3.00</span>
+                                <span>Giảm giá</span>
+                                <span>0 VND</span>
                             </p>
                             <hr>
                             <p class="d-flex total-price">
-                                <span>Total</span>
-                                <span>$17.60</span>
+                                <span>Tổng cộng</span>
+                                <span th:text="${totalPrice} + ' VND'"></span>
                             </p>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="cart-detail p-3 p-md-4">
-                            <h3 class="billing-heading mb-4">Payment Method</h3>
+                            <h3 class="billing-heading mb-4">Phương thức thanh toán</h3>
                             <div class="form-group">
                                 <div class="col-md-12">
                                     <div class="radio">
-                                        <label><input type="radio" name="optradio" class="mr-2"> Direct Bank
-                                            Tranfer</label>
+                                        <label><input type="radio" value="1" name="optradio" class="mr-2"> Thanh toán khi nhận hàng</label>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="col-md-12">
                                     <div class="radio">
-                                        <label><input type="radio" name="optradio" class="mr-2"> Check Payment</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-12">
-                                    <div class="radio">
-                                        <label><input type="radio" name="optradio" class="mr-2"> Paypal</label>
+                                        <label><input type="radio" value="2" name="optradio" class="mr-2"> Thanh toán bằng Paypal</label>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="col-md-12">
                                     <div class="checkbox">
-                                        <label><input type="checkbox" value="" class="mr-2"> I have read and accept the
-                                            terms and conditions</label>
+                                        <label><input type="checkbox" checked value="" class="mr-2"> Tôi đã đọc và đồng ý với các điều khoản</label>
                                     </div>
                                 </div>
                             </div>
-                            <p><a href="#" class="btn btn-primary py-3 px-4">Place an order</a></p>
+                            <p><button type="submit" class="btn btn-primary py-3 px-4">Đặt hàng</button></p>
                         </div>
                     </div>
                 </div>
             </div> <!-- .col-md-8 -->
-        </div>
+        </form>
     </div>
 </section> <!-- .section -->
 
