--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -115,8 +115,8 @@
             <div class="row mb-5">
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Vegefoods</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+                        <h2 class="ftco-heading-2">Vegetfoods</h2>
+                        <p>1 website bán hàng nông sản của Lê Thanh Tuấn tạo nên để làm project vói công nghệ Spring boot và Thymeleaf.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                             <li class="ftco-animate"><a href="#"><span class="fa-brands fa-facebook"></span></a></li>
                             <li class="ftco-animate"><a href="#"><span class="fa-brands fa-youtube"></span></a></li>
@@ -128,8 +128,8 @@
                     <div class="ftco-footer-widget mb-4 ml-md-5">
                         <h2 class="ftco-heading-2">Menu</h2>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="py-2 d-block">Shop</a></li>
-                            <li><a href="#" class="py-2 d-block">About</a></li>
+                            <li><a th:href="@{/vegetfood}" class="py-2 d-block">Trang chủ</a></li>
+                            <li><a th:href="@{/vegetfood/shop}" class="py-2 d-block">Shop</a></li>
                             <li><a href="#" class="py-2 d-block">Journal</a></li>
                             <li><a href="#" class="py-2 d-block">Contact Us</a></li>
                         </ul>
@@ -140,14 +140,10 @@
                         <h2 class="ftco-heading-2">Help</h2>
                         <div class="d-flex">
                             <ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
-                                <li><a href="#" class="py-2 d-block">Shipping Information</a></li>
-                                <li><a href="#" class="py-2 d-block">Returns &amp; Exchange</a></li>
-                                <li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
-                                <li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
-                            </ul>
-                            <ul class="list-unstyled">
-                                <li><a href="#" class="py-2 d-block">FAQs</a></li>
-                                <li><a href="#" class="py-2 d-block">Contact</a></li>
+                                <li><a href="#" class="py-2 d-block">Thông tin vận chuyển</a></li>
+                                <li><a href="#" class="py-2 d-block">Trả lại & Trao đổi</a></li>
+                                <li><a href="#" class="py-2 d-block">Điều khoản và điều kiện</a></li>
+                                <li><a href="#" class="py-2 d-block">Chính sách bảo mật</a></li>
                             </ul>
                         </div>
                     </div>
@@ -157,12 +153,11 @@
                         <h2 class="ftco-heading-2">Have a Questions?</h2>
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain
-                                        View, San Francisco, California, USA</span></li>
+                                <li><i class="fa-solid fa-location-dot mr-2"></i><span class="text">18 Nguyễn Văn Thoại, Ngũ Hành Sơn, Đà Nẵng</span></li>
                                 <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
                                             210</span></a></li>
-                                <li><a href="#"><span class="icon icon-envelope"></span><span
-                                            class="text">info@yourdomain.com</span></a></li>
+                                <li><a href="#"><i class="fa-solid fa-envelope mr-2"></i><span
+                                            class="text">thanhtuanle939@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -170,14 +165,11 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-
-                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script>
+                    <p>
+                        Copyright &copy; 2023
                         All rights reserved | This template
                         is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a
                             href="https://colorlib.com" target="_blank">Lê Thanh Tuấn</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
                 </div>
             </div>
