--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -118,7 +118,7 @@
                                 <td th:text="${o.id}"></td>
                                 <td th:text="${o.orderDate}"></td>
                                 <td th:text="${o.phoneNumber}"></td>
-                                <td th:text="${o.address}"></td>
+                                <td th:text="${o.address}" style="width: 250px;word-break: break-word;"></td>
                                 <td th:text="${o.shippingFee}"></td>
                                 <td th:text="${o.totalPrice}"></td>
                                 <td th:text="${o.status}"></td>
