--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -73,10 +73,7 @@
 							<div class="bottom-area d-flex px-3">
 								<div class="m-auto d-flex">
 									<a th:href="@{/vegetfood/add-to-cart(id=${p.id}, quantity=1)}" class="buy-now d-flex justify-content-center align-items-center mx-1">
-										<span><i class="fa-solid fa-cart-shopping"></i></span>
-									</a>
-									<a href="#" class="heart d-flex justify-content-center align-items-center ">
-										<span><i class="fa-solid fa-heart"></i></span>
+										<span><i class="fa-solid fa-cart-shopping"></i>&nbsp;Thêm vào giỏ hàng</span>
 									</a>
 								</div>
 							</div>
