--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -69,7 +69,7 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
-                    <li class="nav-item active"><a th:href="@{/vegetfood}" class="nav-link">Trang chủ</a></li>
+                    <li class="nav-item"><a th:href="@{/vegetfood}" class="nav-link">Trang chủ</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/vegetfood/shop}">Shop</a></li>
                     <li class="nav-item"><a href="about.html" class="nav-link">Về chúng tôi</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
