--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 
 	<section id="home-section" class="hero">
 		<div class="home-slider owl-carousel">
-			<div class="slider-item" style="background-image: url(images/bg_1.jpg);">
+			<div class="slider-item" style="background-image: url(/images/bg_1.jpg);">
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
@@ -21,14 +21,14 @@
 						<div class="col-md-12 ftco-animate text-center">
 							<h1 class="mb-2">We serve Fresh Vegestables &amp; Fruits</h1>
 							<h2 class="subheading mb-4">We deliver organic vegetables &amp; fruits</h2>
-							<p><a href="#" class="btn btn-primary">View Details</a></p>
+							<p><a th:href="@{/vegetfood/shop}" class="btn btn-primary">View Details</a></p>
 						</div>
 
 					</div>
 				</div>
 			</div>
 
-			<div class="slider-item" style="background-image: url(images/bg_2.jpg);">
+			<div class="slider-item" style="background-image: url(/images/bg_2.jpg);">
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
@@ -36,7 +36,7 @@
 						<div class="col-sm-12 ftco-animate text-center">
 							<h1 class="mb-2">100% Fresh &amp; Organic Foods</h1>
 							<h2 class="subheading mb-4">We deliver organic vegetables &amp; fruits</h2>
-							<p><a href="#" class="btn btn-primary">View Details</a></p>
+							<p><a th:href="@{/vegetfood/shop}" class="btn btn-primary">View Details</a></p>
 						</div>
 
 					</div>
@@ -107,7 +107,7 @@
 								<div class="text text-center">
 									<h2>Vegetables</h2>
 									<p>Protect the health of every home</p>
-									<p><a href="#" class="btn btn-primary">Shop now</a></p>
+									<p><a th:href="@{/vegetfood/shop}" class="btn btn-primary">Shop now</a></p>
 								</div>
 							</div>
 						</div>
@@ -115,13 +115,13 @@
 							<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end"
 								style="background-image: url(images/category-1.jpg);">
 								<div class="text px-3 py-1">
-									<h2 class="mb-0"><a href="#">Fruits</a></h2>
+									<h2 class="mb-0"><a th:href="@{/vegetfood/shop(category=3)}">Trái cây</a></h2>
 								</div>
 							</div>
 							<div class="category-wrap ftco-animate img d-flex align-items-end"
 								style="background-image: url(images/category-2.jpg);">
 								<div class="text px-3 py-1">
-									<h2 class="mb-0"><a href="#">Vegetables</a></h2>
+									<h2 class="mb-0"><a th:href="@{/vegetfood/shop(category=1)}">Rau củ</a></h2>
 								</div>
 							</div>
 						</div>
@@ -132,13 +132,13 @@
 					<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end"
 						style="background-image: url(images/category-3.jpg);">
 						<div class="text px-3 py-1">
-							<h2 class="mb-0"><a href="#">Juices</a></h2>
+							<h2 class="mb-0"><a th:href="@{/vegetfood/shop(category=2)}">Juices</a></h2>
 						</div>
 					</div>
 					<div class="category-wrap ftco-animate img d-flex align-items-end"
 						style="background-image: url(images/category-4.jpg);">
 						<div class="text px-3 py-1">
-							<h2 class="mb-0"><a href="#">Dried</a></h2>
+							<h2 class="mb-0"><a th:href="@{/vegetfood/shop(category=4)}">Dried</a></h2>
 						</div>
 					</div>
 				</div>
@@ -158,35 +158,37 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 col-lg-3 ftco-animate">
+				<div class="col-md-6 col-lg-3 ftco-animate" th:each="p : ${products}">
 					<div class="product">
-						<a href="#" class="img-prod"><img class="img-fluid" th:src="@{/images/product-1.jpg}"
-								alt="Colorlib Template">
+						<a th:href="@{/vegetfood/shop/detail(id=${p.id})}" class="img-prod">
+							<img class="img-fluid" th:src="@{'/images/' + ${p.image}}" alt="Colorlib Template">
 							<span class="status">30%</span>
 							<div class="overlay"></div>
 						</a>
 						<div class="text py-3 pb-4 px-3 text-center">
-							<h3><a href="#">Bell Pepper</a></h3>
+							<h3><a th:text="${p.name}" th:href="@{/vegetfood/shop/detail(id=${p.id})}"></a></h3>
 							<div class="d-flex">
 								<div class="pricing">
-									<p class="price"><span class="mr-2 price-dc">$120.00</span><span
-											class="price-sale">$80.00</span></p>
+									<p class="price">
+										<span class="mr-2 price-dc" th:text="'$'+${p.price}"></span>
+										<span class="price-sale" th:text="${p.price} + 'VND'"></span>
+									</p>
 								</div>
 							</div>
 							<div class="bottom-area d-flex px-3">
 								<div class="m-auto d-flex">
-	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-	    								<span><i class="fa-solid fa-cart-shopping"></i></span>
-	    							</a>
-	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
-	    								<span><i class="fa-solid fa-heart"></i></span>
-	    							</a>
-    							</div>
+									<a th:href="@{/vegetfood/add-to-cart(id=${p.id}, quantity=1)}" class="buy-now d-flex justify-content-center align-items-center mx-1">
+										<span><i class="fa-solid fa-cart-shopping"></i>&nbsp;Thêm vào giỏ hàng</span>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="d-flex justify-content-center">
+			<a th:href="@{/vegetfood/shop}" class="btn btn-primary">Xem thêm</a>
 		</div>
 	</section>
 
