--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,6 +9,7 @@
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet" />
     <meta charset="UTF-8">
+    <link rel="icon" th:href="@{/images/VEGETFOOD.png}" type="image/x-icon" />
     <title>Đăng ký</title>
 </head>
 
